--- a/AmostraDeTalentos/src/main/webapp/resources/css/calendario.css
+++ b/AmostraDeTalentos/src/main/webapp/resources/css/calendario.css
@@ -1,6 +1,4 @@
-body {
-	margin: 40px 10px;
-	padding: 0;
+.calendario{
 	font-family: "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
 	font-size: 14px;
 }
