--- a/AmostraDeTalentos/src/main/webapp/resources/css/login.css
+++ b/AmostraDeTalentos/src/main/webapp/resources/css/login.css
@@ -1,10 +1,12 @@
 @charset "utf-8";
 
 div.main {
-
 	background-image: url("../img/background.jpg");
 	height: calc(100vh);
-	width: 100%;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 [class*="fontawesome-"]:before {
@@ -23,10 +25,18 @@ div.main {
 	after
 	{
 	
+	
+	
     
+	
+	
 	box-sizing
 	:
+	
+	
 	 
+	
+	
 	border-box;
 }
 
@@ -79,28 +89,26 @@ p {
 }
 
 /* ---------- LOGIN ---------- */
-
 .logo {
 	color: #fff;
 	font-size: 35px;
 }
 
-.img-logo{
-	height: 160px;
-	padding-left: 20px;
+
+@media ( min-width : 768px) {
+	.border-logo {
+		border-left: 2px solid #fff;
+	}
 }
 
-.img-logo > img{
-	width: 110px;
+@media ( max-width : 767px) {
+	.border-logo {
+		padding-top: 15px;
+		border-top: 2px solid #fff;
+		margin-top: 15px;
+	}
 }
 
-.border-left{
-	border-left: 2px solid #fff;
-}
-
-.spaceLeft{
-	padding-left: 10px;
-}
 
 span.login.fa {
 	background-color: #fff;
@@ -112,13 +120,12 @@ span.login.fa {
 	font-size: 24px;
 	line-height: 50px;
 	text-align: center;
-	width: 50px;
+	width: 20%;
 }
 
 input.login {
 	height: 50px;
 }
-
 
 input.login[type="text"], input.login[type="password"] {
 	background-color: #fff;
@@ -126,7 +133,7 @@ input.login[type="text"], input.login[type="password"] {
 	color: #000;
 	margin-bottom: 1em;
 	padding: 0 16px;
-	width: 200px;
+	width: 80%;
 }
 
 input.login[type="submit"] {
@@ -139,6 +146,7 @@ input.login[type="submit"] {
 	/* margin-bottom: 2em; */
 	text-transform: uppercase;
 	padding: 5px 10px;
+	width: 100%;
 	height: 30px;
 }
 
@@ -146,12 +154,11 @@ input.login[type="submit"]:hover {
 	background-color: #004040;
 }
 
-.small-text{
+.small-text {
 	font-size: 14px;
 }
 
 /*---------------------- Rodapé --------------------*/
-
 html, body {
 	height: 100%;
 }
@@ -171,12 +178,16 @@ html, body {
 	padding-top: 15px;
 }
 
-div.left{
+div.left {
 	float: left;
 }
 
-div.right{
+div.right {
 	float: right;
+}
+
+.tamanhofonterodape {
+	font-size: 14px;
 }
 
 .content {
@@ -193,203 +204,4 @@ div.right{
 
 .fright {
 	float: right;
-}
-
-@media screen and (max-width: 768px) {
-	div.main {
-
-	background-image: url("../img/background.jpg");
-	height: calc(100vh);
-	width: 100%;
-}
-
-[class*="fontawesome-"]:before {
-	font-family: 'FontAwesome', sans-serif;
-}
-
-/* ---------- GENERAL ---------- */
-* {
-	box-sizing: border-box;
-	margin: 0px auto;
-	&:
-	before
-	,
-	&
-	:
-	after
-	{
-	
-    
-	box-sizing
-	:
-	 
-	border-box;
-}
-
-}
-body {
-	color: #606468;
-	font: 87.5%/1.5em 'Open Sans', sans-serif;
-	margin: 0;
-}
-a {
-	color: #eee;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-input {
-	border: none;
-	font-family: 'Open Sans', Arial, sans-serif;
-	font-size: 14px;
-	line-height: 1.5em;
-	padding: 0;
-	-webkit-appearance: none;
-}
-
-p {
-	line-height: 1.5em;
-}
-
-.clearfix {
-	*zoom: 1; &: before , & : after {
-    content : ' ';
-	display: table;
-}
-
-&
-:after {
-	clear: both;
-}
-
-}
-.container {
-	left: 50%;
-	position: fixed;
-	top: 50%;
-	transform: translate(-50%, -50%);
-}
-
-/* ---------- LOGIN ---------- */
-/*
-.logo {
-	color: #fff;
-	font-size: 2%;
-}
-
-.img-logo{
-	aling: center;
-	height: 0%;
-	padding-left: 22%;
-}
-
-.img-logo > img{
-	width: 2%;
-}
-*/
-
-.border-left{
-	border-left: 2px solid #fff;
-}
-
-.spaceLeft{
-	padding-left: 3%;
-}
-
-span.login.fa {
-	background-color: #fff;
-	border-radius: 30px 10px 10px 30px;
-	color: #000;
-	display: block;
-	float: left;
-	height: 100%;
-	font-size: 100%;
-	line-height: 100%;
-	text-align: center;
-	width: 100%;
-}
-
-input.login {
-	height: 100%;
-}
-
-
-input.login[type="text"], input.login[type="password"] {
-	background-color: #fff;
-	border-radius: 5px 20px 20px 5px;
-	color: #000;
-	margin-bottom: 1em;
-	padding: 0 16px;
-	width: 100%;
-}
-
-input.login[type="submit"] {
-	border-radius: 30px;
-	-moz-border-radius: 30px;
-	-webkit-border-radius: 3px;
-	background-color: #000000;
-	color: #eee;
-	font-weight: bold;
-	/* margin-bottom: 2em; */
-	text-transform: uppercase;
-	padding: 3px 5px;
-	height: 100%;
-}
-
-input.login[type="submit"]:hover {
-	background-color: #004040;
-}
-
-.small-text{
-	font-size: 100%;
-}
-
-/*---------------------- Rodapé --------------------*/
-
-html, body {
-	height: 100%;
-}
-
-.geral {
-	min-height: 100%;
-	position: relative;
-	width: 100%;
-}
-
-.footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	background: Black;
-	height: 50px;
-	padding-top: 15px;
-}
-
-div.left{
-	float: left;
-}
-
-div.right{
-	float: right;
-}
-
-.content {
-	overflow: hidden;
-}
-
-.aside {
-	width: 100px;
-}
-
-.fleft {
-	float: left;
-}
-
-.fright {
-	float: right;
-}
-
 }
